ingress/date.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: date-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: date-server
  template:
    metadata:
      labels:
        app: date-server
    spec:
      containers:
      - name: date-server
        image: nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        persistentVolumeClaim:
          claimName: date-server
---
apiVersion: v1
kind: Service
metadata:
  name: date-server
spec:
  selector:
    app: date-server
  type: ClusterIP
  # sessionAffinity: ClientIP
  ports:
  - port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: date-updater
  labels:
    app: date-updater
spec:
  restartPolicy: Always
  containers:
  - name: date-updater
    image: busybox
    imagePullPolicy: IfNotPresent
    command:
    - /bin/sh
    - -c
    - while :; do date > /html/index.html; sleep 1; done
    volumeMounts:
    - name: html
      mountPath: /html
  volumes:
  - name: html
    persistentVolumeClaim:
      claimName: date-server
