ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - localhost
    secretName: localhost-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /date
        pathType: Prefix
        backend:
          service:
            name: date-server
            port:
              number: 80
      - path: /fortune
        pathType: Prefix
        backend:
          service:
            name: fortune-server
            port:
              number: 80
